fixed spacing and media query issues.

--- a/farms.css
+++ b/farms.css
@@ -5,6 +5,7 @@ body{
   font-family: "catamaran", sans-serif;
   min-height:100vh;
   max-height: 100vh;
+  overflow:hidden;
 }
 h1{
   color:rgb(200,221,199);
