--- a/info.css
+++ b/info.css
@@ -15,7 +15,7 @@ h1{
   font-size:6em;
 }
 .info-wrapper,{
-background-color:rgba(135,135,135,.5);
+background-color:rgba(200,200,200,.8);
 margin:150px auto;
 text-align: center;
 }
@@ -27,7 +27,7 @@ text-align: center;
 }
 
 ul{
-  color:rgb(200,200,200);
+  color:rgb(250,250,250);
 }
 li{
   font-style: italic, bold;
@@ -36,7 +36,7 @@ li{
 p{
   font-style: italic;
   font-size: 2.5em;
-  color:rgb(240,240,240);
+  color:rgb(250,250,250);
   text-shadow: 0px 0px 5px rgb(42,41,38);
 
 }
@@ -49,9 +49,9 @@ p{
 a{
   padding:40px;
   text-decoration: none;
-  color:rgb(218,218,218);
+  color:rgb(240,240,240);
 }
 a:hover{
-  color:rgb(255,255,255);
+  color:rgb(190,190,190);
   text-decoration: none;
 }
